# calcspeed

src/: file.c  typespeed.c  typespeed.h
words/: Makefile.am  Makefile.in  words.mult  words.mult12  words.sqm12  words.square
